# encode

./: README.md  docs.md  pyproject.toml
docs/: async.md  concepts.md  cookbook.md  errors.md  executors.md  intercept.md  messages.md  quickstart.md  relay.md  sessions.md  streaming.md  structured-output.md  terminal.md  tools.md  whisper.md
examples/: basic_chat.py  intercept.py  intercept_compact.py  responses_endpoint.py  session_resume.py  stateful_tool.py  structured_output.py  tool_discovery.py  tools_loop.py  whisper_transcribe.py
src/encode/: __init__.py  _config.py  _http.py  _schema.py  _streaming.py  client.py  errors.py  events.py  executor.py  messages.py  relay.py  responses.py  session.py  terminal.py  tools.py  whisper.py
tests/: conftest.py  test_async.py  test_errors.py  test_executor.py  test_intercept_mutation.py  test_intercept_tool_discovery.py  test_messages.py  test_messages_obj.py  test_relay_chat.py  test_relay_responses.py  test_relay_session.py  test_response_format.py  test_session.py  test_session_tools.py  test_streaming.py  test_terminal.py  test_tool_loop.py  test_tools_schema.py  test_whisper.py
