[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "courier-encode"
version = "0.1.41"
description = "Python SDK for OpenAI-compatible inference endpoints (Courier and friends) with auto tool-call loops, structured outputs, and Whisper."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Recursion AI" }]
keywords = ["openai", "courier", "llm", "sdk", "agents", "tool-calling", "whisper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "typing-extensions>=4.10",
    "python-dotenv>=1.0",
    "pexpect>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
]

[project.urls]
Homepage = "https://getcourier.ai"
Documentation = "https://getcourier.ai/docs"
Repository = "https://github.com/recursion-ai/encode"

[tool.hatch.build.targets.wheel]
packages = ["src/encode"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/encode/__init__.py" = ["E402"]
"tests/*" = ["B018"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
